--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -15,8 +15,20 @@ h1 {
 h2 {
     font-size: 30px;
     text-align: right;
-    margin-top: -700px;
+    margin-top: -500px;
     margin-right: 335px;
+}
+
+h3 {
+    color: #046279;
+    font-size: 50px;
+    margin-top: 250px;
+}
+
+h4 {
+    color: #046279;
+    font-size: 50px;
+    margin-top: 200px;
 }
 
 button {
@@ -27,7 +39,6 @@ button {
     margin: 10px;
     cursor: pointer;
     font-size: 16px;
-    display: flex;
 }
 
 button:hover {
@@ -44,7 +55,7 @@ input, select {
 pre {
     display: block;
     background-color: #00000030;
-    height: 585px;
+    height: 385px;
     width: 500px;
     margin: -12vh 53vw;
     padding-top: 100px;
@@ -53,12 +64,56 @@ pre {
     white-space: initial;
 }
 
+.login-form {
+    margin: 0 5vmin;
+    text-align: center;
+    padding: 8pt;
+}
+.login-form input {
+    display: block;
+    margin: 5pt auto;
+    padding: 6pt;
+    border: none;
+    border-radius: 5px;
+}
+.login-form button {
+    padding: 10px;
+    margin-top: 50px;
+    background-color: #03556a;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.signup-form {
+    margin: 0 5vmin;
+    text-align: center;
+    padding: 8pt;
+}
+.signup-form input {
+    display: block;
+    margin: 5pt auto;
+    padding: 6pt;
+    border: none;
+    border-radius: 5px;
+}
+.signup-form button {
+    padding: 10px;
+    margin-top: 50px;
+    background-color: #03556a;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
 .lyrics-form {
     position: relative;
     display: block;
     background-color: #00000030;
     width: 350px;
-    height: 600px;
+    height: 400px;
     margin: 4vw;
     border-radius: 10px;
     text-align: left;
@@ -67,7 +122,7 @@ pre {
     color: #ffffff;
 }
 .lyrics-form label {
-    margin-top: 60px;
+    margin-top: 30px;
     display: flex;
     text-align: left;
     font-size: 30px;
@@ -96,5 +151,5 @@ pre {
     text-align: center;
     border-radius: 10px;
     font-size: 40px;
-    margin-top: 200px;
+    margin-top: 100px;
 }
