--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,3 +1,38 @@
+.header {
+    background-color: #00000030;
+    color: white;
+    padding: 3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header h1 {
+    margin: 0;
+    font-size: 60px;
+}
+
+.header nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.header nav ul li {
+    margin-right: 20px;
+}
+
+.header nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 30px;
+}
+
+.header nav ul li a:hover {
+    text-decoration: underline;
+}
+
 body {
     font-family: 'Arial', sans-serif;
     text-align: center;
@@ -22,7 +57,7 @@ h2 {
 h3 {
     color: #046279;
     font-size: 50px;
-    margin-top: 250px;
+    margin-top: 100px;
 }
 
 h4 {
@@ -75,15 +110,20 @@ pre {
     padding: 6pt;
     border: none;
     border-radius: 5px;
+    font-size: 15px;
 }
 .login-form button {
     padding: 10px;
     margin-top: 50px;
-    background-color: #03556a;
+    background-color: #046279;
     color: white;
     border: none;
     cursor: pointer;
     border-radius: 10px;
+    font-size: 15px;
+}
+.login-form button:hover {
+    background-color: #03556a;
 }
 
 .signup-form {
@@ -92,9 +132,10 @@ pre {
     padding: 8pt;
 }
 .signup-form input {
+    font-size: 18px;
     display: block;
     margin: 5pt auto;
-    padding: 6pt;
+    padding: 20pt;
     border: none;
     border-radius: 5px;
 }
