--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -120,7 +120,6 @@ pre {
     border: none;
     cursor: pointer;
     border-radius: 10px;
-    font-size: 15px;
 }
 .login-form button:hover {
     background-color: #03556a;
@@ -132,21 +131,24 @@ pre {
     padding: 8pt;
 }
 .signup-form input {
-    font-size: 18px;
     display: block;
     margin: 5pt auto;
-    padding: 20pt;
+    padding: 6pt;
     border: none;
     border-radius: 5px;
+    font-size: 15px;
 }
 .signup-form button {
     padding: 10px;
     margin-top: 50px;
-    background-color: #03556a;
+    background-color: #046279;
     color: white;
     border: none;
     cursor: pointer;
     border-radius: 10px;
+}
+.signup-form button:hover {
+    background-color: #03556a;
 }
 
 .lyrics-form {
